tests/compile-fail/Rule_8_12.rs
enum Uniqueness {
    red = 3,
    blue,
    green,
    yellow = 5, //~ ERROR discriminant value `5` already exists
}

fn main() {}
